addition of top nav and services part.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/mobile.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    
+    <nav class="nav">
+        <!-- Placeholder Logo -->
+        <div class="logo">
+        <img src="assets/Logo large.png" alt="Company Logo">
+    </div>
+        
+        <!-- Menu Icon -->
+        <div class="menu">
+            <svg aria-label="Settings" class="x1lliihq x1n2onr6 x5n08af" fill="currentColor" height="24" role="img" viewBox="0 0 24 24" width="24">
+                <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="3" x2="21" y1="4" y2="4"></line>
+                <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="3" x2="21" y1="12" y2="12"></line>
+                <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="3" x2="21" y1="20" y2="20"></line>
+            </svg>
+        </div>
+    </nav>
+    <div class="services-section">
+        <h2>Our <span>Services</span></h2>
+        <div class="services-container">
+            <div class="service-card">
+                <div class="service-content">
+                    <div class="service-title-wrapper">
+                    <i class="fas fa-paint-brush" style="font-size: 22px; margin-bottom: 10px;"></i>
+                    <h3 class="service-title">Logo Design</h3>
+                </div>
+                    <a href="#" class="service-link">Request a quote &rarr;</a>
+                </div>
+            </div>
+            <div class="service-card">
+                <div class="service-content">
+                    <div class="service-title-wrapper">
+                    <i class="fas fa-code" style="font-size: 22px; margin-bottom: 10px;"></i>
+                    <h3 class="service-title">Development</h3>
+                </div>
+                    <a href="#" class="service-link">Request a quote &rarr;</a>
+                </div>
+            </div>
+            <div class="service-card">
+                <div class="service-content">
+                    <div class="service-title-wrapper">
+                    <i class="fas fa-pencil-ruler" style="font-size: 22px; margin-bottom: 10px;"></i>
+                    <h3 class="service-title">UI/UX Design</h3>
+                </div>
+                    <a href="#" class="service-link">Request a quote &rarr;</a>
+                </div>
+            </div>
+            <div class="service-card">
+                <div class="service-content">
+                    <div class="service-title-wrapper">
+                    <i class="fas fa-code" style="font-size: 22px; margin-bottom: 10px;"></i>
+                    <h3 class="service-title">Digital Marketing</h3>
+                </div>
+                    <a href="#" class="service-link">Request a quote &rarr;</a>
+                </div>
+            </div>
+        </div>
+        <div class="view-more">
+            <a href="#">View more &rarr;</a>
+        </div>
+    </div>
 </body>
 </html>
