--- a/index.html
+++ b/index.html
@@ -1,71 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/mobile.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
-<body>
+    <!-- <link rel="stylesheet" href="css/desktop.css"/> -->
+    <link rel="stylesheet" href="css/mobile.css" />
+    <!-- <link rel="stylesheet" href="css/tablet.css"/> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <!-- <lik rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Proxima+Nova" /> -->
+  </head>
+  <body>
     <nav class="nav">
-        <!-- Placeholder Logo -->
-        <div class="logo">
-        <img src="assets/Logo large.png" alt="Company Logo">
-    </div>
-        
-        <!-- Menu Icon -->
-        <div class="menu">
-            <svg aria-label="Settings" class="x1lliihq x1n2onr6 x5n08af" fill="currentColor" height="24" role="img" viewBox="0 0 24 24" width="24">
-                <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="3" x2="21" y1="4" y2="4"></line>
-                <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="3" x2="21" y1="12" y2="12"></line>
-                <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="3" x2="21" y1="20" y2="20"></line>
-            </svg>
-        </div>
+      <!-- Placeholder Logo -->
+      <div class="logo">
+        <img src="assets/Logo large.png" alt="Company Logo" />
+      </div>
+
+      <!-- Menu Icon -->
+      <div class="menu">
+        <svg
+          aria-label="Settings"
+          class="x1lliihq x1n2onr6 x5n08af"
+          fill="currentColor"
+          height="24"
+          role="img"
+          viewBox="0 0 24 24"
+          width="24"
+        >
+          <line
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            x1="3"
+            x2="21"
+            y1="4"
+            y2="4"
+          ></line>
+          <line
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            x1="3"
+            x2="21"
+            y1="12"
+            y2="12"
+          ></line>
+          <line
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            x1="3"
+            x2="21"
+            y1="20"
+            y2="20"
+          ></line>
+        </svg>
+      </div>
     </nav>
+    <main>
+      <header>
+        <h1>
+          Crafting <span class="img">Visual</span> Stories: Unleashing Creative
+          Essence
+        </h1>
+      </header>
+
+      <section id="introduction">
+        <button class="lets-talk-btn">
+          Let's talk <img src="./assets/arrow-right.png" />
+        </button>
+
+        <div class="introduction-image">
+          <img src="./assets/woman-looking-color-palettes-medium-shot.png" />
+        </div>
+
+        <h2>Elevate Your Brand Identity</h2>
+
+        <p>
+          Unlock the true potential of your brand. Our passionate team of
+          creative experts is committed to delivering innovative and tailor-made
+          solutions that elevate your brand to new heights.
+        </p>
+
+        <div class="introduction-image">
+          <img src="./assets/branding.png" />
+        </div>
+
+        <p>
+          We believe that a strong brand is the conerstone of every successfull
+          business. We are passionate team of branding experts dedicated to
+          helping business like yours create a unique and compeling brand
+          identity.
+        </p>
+
+        <p>
+          With our extensive experience and deep understanding of brand
+          strategy, design, and storytelling, we collaborate closely with our
+          clients to craft brand experiences that resonate with their target
+          audience. Our goal is to create brands that not only capture attention
+          but also foster trut , loyalty, and recognition.
+        </p>
+      </section>
+    </main>
     <div class="services-section">
-        <h2>Our <span>Services</span></h2>
-        <div class="services-container">
-            <div class="service-card">
-                <div class="service-content">
-                    <div class="service-title-wrapper">
-                    <i class="fas fa-paint-brush" style="font-size: 22px; margin-bottom: 10px;"></i>
-                    <h3 class="service-title">Logo Design</h3>
-                </div>
-                    <a href="#" class="service-link">Request a quote &rarr;</a>
-                </div>
+      <h2>Our <span>Services</span></h2>
+      <div class="services-container">
+        <div class="service-card">
+          <div class="service-content">
+            <div class="service-title-wrapper">
+              <i
+                class="fas fa-paint-brush"
+                style="font-size: 22px; margin-bottom: 10px"
+              ></i>
+              <h3 class="service-title">Logo Design</h3>
             </div>
-            <div class="service-card">
-                <div class="service-content">
-                    <div class="service-title-wrapper">
-                    <i class="fas fa-code" style="font-size: 22px; margin-bottom: 10px;"></i>
-                    <h3 class="service-title">Development</h3>
-                </div>
-                    <a href="#" class="service-link">Request a quote &rarr;</a>
-                </div>
-            </div>
-            <div class="service-card">
-                <div class="service-content">
-                    <div class="service-title-wrapper">
-                    <i class="fas fa-pencil-ruler" style="font-size: 22px; margin-bottom: 10px;"></i>
-                    <h3 class="service-title">UI/UX Design</h3>
-                </div>
-                    <a href="#" class="service-link">Request a quote &rarr;</a>
-                </div>
-            </div>
-            <div class="service-card">
-                <div class="service-content">
-                    <div class="service-title-wrapper">
-                    <i class="fas fa-code" style="font-size: 22px; margin-bottom: 10px;"></i>
-                    <h3 class="service-title">Digital Marketing</h3>
-                </div>
-                    <a href="#" class="service-link">Request a quote &rarr;</a>
-                </div>
-            </div>
+            <a href="#" class="service-link">Request a quote &rarr;</a>
+          </div>
         </div>
-        <div class="view-more">
-            <a href="#">View more &rarr;</a>
+        <div class="service-card">
+          <div class="service-content">
+            <div class="service-title-wrapper">
+              <i
+                class="fas fa-code"
+                style="font-size: 22px; margin-bottom: 10px"
+              ></i>
+              <h3 class="service-title">Development</h3>
+            </div>
+            <a href="#" class="service-link">Request a quote &rarr;</a>
+          </div>
         </div>
+        <div class="service-card">
+          <div class="service-content">
+            <div class="service-title-wrapper">
+              <i
+                class="fas fa-pencil-ruler"
+                style="font-size: 22px; margin-bottom: 10px"
+              ></i>
+              <h3 class="service-title">UI/UX Design</h3>
+            </div>
+            <a href="#" class="service-link">Request a quote &rarr;</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-content">
+            <div class="service-title-wrapper">
+              <i
+                class="fas fa-code"
+                style="font-size: 22px; margin-bottom: 10px"
+              ></i>
+              <h3 class="service-title">Digital Marketing</h3>
+            </div>
+            <a href="#" class="service-link">Request a quote &rarr;</a>
+          </div>
+        </div>
+      </div>
+      <div class="view-more">
+        <a href="#">View more &rarr;</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
