--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css" />
     <!-- <link rel="stylesheet" href="css/desktop.css"/> -->
     <link rel="stylesheet" href="css/mobile.css" />
     <!-- <link rel="stylesheet" href="css/tablet.css"/> -->
@@ -11,7 +12,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <!-- <lik rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Proxima+Nova" /> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="nav">
@@ -69,22 +73,22 @@
     </nav>
     <main>
       <header>
-        <h1>
-          Crafting <span class="img">Visual</span> Stories: Unleashing Creative
-          Essence
-        </h1>
+        <h2>
+          Crafting <span class="underline-img">Visual</span> Stories: Unleashing
+          Creative Essence
+        </h2>
       </header>
 
       <section id="introduction">
-        <button class="lets-talk-btn">
+        <a class="lets-talk-link" href="#">
           Let's talk <img src="./assets/arrow-right.png" />
-        </button>
+        </a>
 
         <div class="introduction-image">
           <img src="./assets/woman-looking-color-palettes-medium-shot.png" />
         </div>
 
-        <h2>Elevate Your Brand Identity</h2>
+        <h2>Elevate Your <span class="underline-img">Brand Identity</span></h2>
 
         <p>
           Unlock the true potential of your brand. Our passionate team of
@@ -111,62 +115,63 @@
           but also foster trut , loyalty, and recognition.
         </p>
       </section>
+
+      <section class="services-section">
+        <h2>Our <span>Services</span></h2>
+        <div class="services-container">
+          <div class="service-card">
+            <div class="service-content">
+              <div class="service-title-wrapper">
+                <i
+                  class="fas fa-paint-brush"
+                  style="font-size: 22px; margin-bottom: 10px"
+                ></i>
+                <h3 class="service-title">Logo Design</h3>
+              </div>
+              <a href="#" class="service-link">Request a quote &rarr;</a>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-content">
+              <div class="service-title-wrapper">
+                <i
+                  class="fas fa-code"
+                  style="font-size: 22px; margin-bottom: 10px"
+                ></i>
+                <h3 class="service-title">Development</h3>
+              </div>
+              <a href="#" class="service-link">Request a quote &rarr;</a>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-content">
+              <div class="service-title-wrapper">
+                <i
+                  class="fas fa-pencil-ruler"
+                  style="font-size: 22px; margin-bottom: 10px"
+                ></i>
+                <h3 class="service-title">UI/UX Design</h3>
+              </div>
+              <a href="#" class="service-link">Request a quote &rarr;</a>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-content">
+              <div class="service-title-wrapper">
+                <i
+                  class="fas fa-code"
+                  style="font-size: 22px; margin-bottom: 10px"
+                ></i>
+                <h3 class="service-title">Digital Marketing</h3>
+              </div>
+              <a href="#" class="service-link">Request a quote &rarr;</a>
+            </div>
+          </div>
+        </div>
+        <div class="view-more">
+          <a href="#">View more &rarr;</a>
+        </div>
+      </section>
     </main>
-    <div class="services-section">
-      <h2>Our <span>Services</span></h2>
-      <div class="services-container">
-        <div class="service-card">
-          <div class="service-content">
-            <div class="service-title-wrapper">
-              <i
-                class="fas fa-paint-brush"
-                style="font-size: 22px; margin-bottom: 10px"
-              ></i>
-              <h3 class="service-title">Logo Design</h3>
-            </div>
-            <a href="#" class="service-link">Request a quote &rarr;</a>
-          </div>
-        </div>
-        <div class="service-card">
-          <div class="service-content">
-            <div class="service-title-wrapper">
-              <i
-                class="fas fa-code"
-                style="font-size: 22px; margin-bottom: 10px"
-              ></i>
-              <h3 class="service-title">Development</h3>
-            </div>
-            <a href="#" class="service-link">Request a quote &rarr;</a>
-          </div>
-        </div>
-        <div class="service-card">
-          <div class="service-content">
-            <div class="service-title-wrapper">
-              <i
-                class="fas fa-pencil-ruler"
-                style="font-size: 22px; margin-bottom: 10px"
-              ></i>
-              <h3 class="service-title">UI/UX Design</h3>
-            </div>
-            <a href="#" class="service-link">Request a quote &rarr;</a>
-          </div>
-        </div>
-        <div class="service-card">
-          <div class="service-content">
-            <div class="service-title-wrapper">
-              <i
-                class="fas fa-code"
-                style="font-size: 22px; margin-bottom: 10px"
-              ></i>
-              <h3 class="service-title">Digital Marketing</h3>
-            </div>
-            <a href="#" class="service-link">Request a quote &rarr;</a>
-          </div>
-        </div>
-      </div>
-      <div class="view-more">
-        <a href="#">View more &rarr;</a>
-      </div>
-    </div>
   </body>
 </html>
