addition of footer and elements.

--- a/index.html
+++ b/index.html
@@ -67,5 +67,44 @@
             <a href="#">View more &rarr;</a>
         </div>
     </div>
+    <footer class="footer">
+        <div class="social-icons-container">
+            <img src="assets/Logo large.png" alt="Logo" class="logo-icon">
+            <img src="assets/icon/dribbble.png" alt="Social Icon">
+            <img src="assets/icon/behance.png" alt="Social Icon">
+            <img src="assets/icon/instagram.png" alt="Social Icon">
+            <img src="assets/icon/linkedin.png" alt="Social Icon">
+        </div>
+
+        <div class="newsletter">
+            <h3>Subscribe to our Newsletter</h3>
+            <label for="email" style="color: white;">Email*</label>
+            <input type="email" id="email" placeholder="Enter your email">
+            <div class="subscribe">
+                By subscribing you agree to our <a href="#" style="color: #c8c8c8ba;">Terms & Conditions</a>
+            </div>
+            <button>Subscribe &rarr;</button>
+        </div>
+
+        <div class="contact">
+            <h3 style="color: white; margin-bottom: 15px;">Contact</h3>
+            <div> <img src="assets/icon/location.png" alt="Location Icon" class="icon"> 66 Road Broklyn Street, 600</div>
+            <div> <img src="assets/icon/call.png" alt="Call" class="icon">(509) 562-1912</div>
+            <div> <img src="assets/icon/sms.png" alt="SMS" class="icon">contact@creativedesign.com</div>
+        </div>
+
+        <div class="explore">
+            <h3 style="color: white;">Explore</h3>
+            <a href="#">About</a>
+            <a href="#">Our Team</a>
+            <a href="#">Shop</a>
+            <a href="#">Career</a>
+            <a href="#">Blog</a>
+        </div>
+
+        <div class="copyright">
+            &copy; 2023 Creative Design Agency, All Rights Reserved
+        </div>
+    </footer>
 </body>
 </html>
