--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </h2>
       </header>
 
-      <section id="introduction">
+      <section id="introduction-section">
         <a class="lets-talk-link" href="#">
           Let's talk <img src="./assets/arrow-right.png" />
         </a>
@@ -170,6 +170,32 @@
         </div>
         <div class="view-more">
           <a href="#">View more &rarr;</a>
+        </div>
+      </section>
+
+      <section id="testemonial-section">
+        <h2>Happy <span class="underline-img">stories</span> of our clients</h2>
+
+        <div class="testemonial">
+          <div class="testemonial-image">
+            <img src="./assets/testemonial.png" />
+          </div>
+
+          <div class="testemonial-text">
+            <img src="./assets/quotation-mark.png" />
+            <p>
+              With our extensive experience and deep understanding of brand
+              strategy, design, and storytelling, we collaborate closely with
+              our clients to craft brand experiences that resonate with their
+              target audience. Our goal is to create brands that not only
+              capture attention but also foster trust, loyalty, and recognition.
+            </p>
+          </div>
+        </div>
+        <div class="testemonial-slider">
+          <img src="./assets/c1.png" />
+          <img src="./assets/c2.png" />
+          <img src="./assets/c1.png" />
         </div>
       </section>
     </main>
