Add contact and stay updated sections

--- a/index.html
+++ b/index.html
@@ -198,6 +198,92 @@
           <img src="./assets/c1.png" />
         </div>
       </section>
+
+      <section id="contact-us-section">
+        <div class="contact-us">
+          <h2><span class="underline-img">Contact</span> us today</h2>
+
+          <div class="icons">
+            <div class="icon">
+              <img src="./assets/icon/location-dark.png" />
+            </div>
+            <div class="icon">
+              <img src="./assets/icon/call-dark.png" />
+            </div>
+            <div class="icon">
+              <img src="./assets/icon/sms-dark.png" />
+            </div>
+          </div>
+
+          <div class="info">
+            <div class="item">
+              <h3>Office Address</h3>
+              <p>66 Road Broklyn Street, 600</p>
+            </div>
+            <div class="item">
+              <h3>Contact No</h3>
+              <p>(509) 562-1912</p>
+            </div>
+            <div class="item">
+              <h3>Email</h3>
+              <p>contact@creativedesign.com</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="form">
+          <form id="contact-form" action="/submit-path" method="post">
+            <div id="name-field">
+              <label for="name-input">Name*</label>
+              <input type="text" id="name-input" name="name" required />
+            </div>
+
+            <div id="email-field">
+              <label for="email-input">Email*</label>
+              <input type="email" id="email-input" name="email" required />
+            </div>
+
+            <div id="company-field">
+              <label for="company-input">Company Name*</label>
+              <input type="text" id="company-input" name="company" required />
+            </div>
+
+            <div id="phone-field">
+              <label for="phone-input">Phone No*</label>
+              <input type="text" id="phone-input" name="phone" required />
+            </div>
+
+            <button id="submit" type="submit">Submit</button>
+          </form>
+        </div>
+      </section>
+
+      <section id="stay-updated-section">
+        <h2>Stay <span class="underline-img">updated</span> with blogs</h2>
+
+        <div class="cards">
+          <div class="card">
+            <img class="stay-updated-image" src="./assets/stay-updated-1.png" />
+            <div class="description">
+              <p>Basic rule of running web agency business</p>
+              <span>Read more <img src="./assets/arrow-right-blue.png" /></span>
+            </div>
+          </div>
+          <div class="card">
+            <img class="stay-updated-image" src="./assets/stay-updated-2.png" />
+            <div class="description">
+              <p>Understanding different types of Marketing data</p>
+              <span>Read more <img src="./assets/arrow-right-blue.png" /></span>
+            </div>
+          </div>
+        </div>
+
+        <div class="view-all-btn">
+          <button class="action-button">
+            View All <img src="./assets/arrow-right.png" />
+          </button>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="social-icons-container">
