--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  class="fas fa-paint-brush"
-                  style="font-size: 22px; margin-bottom: 10px"
-                ></i>
+                <img class="icon-image"
+                src="assets/icon/pen-tool-2.png"
+                alt="Logo Design Icon"
+                style="width: 22px; height: 22px; margin-bottom: 10px; z-index:2;"
+              />
                 <h3 class="service-title">Logo Design</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
@@ -134,10 +135,11 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  class="fas fa-code"
-                  style="font-size: 22px; margin-bottom: 10px"
-                ></i>
+                <img class="icon-image"
+                src="assets/icon/scroll.png"
+                alt="Logo Design Icon"
+                style="width: 22px; height: 22px; margin-bottom: 10px; z-index:2;"
+              />
                 <h3 class="service-title">Development</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
@@ -146,10 +148,11 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  class="fas fa-pencil-ruler"
-                  style="font-size: 22px; margin-bottom: 10px"
-                ></i>
+                <img class="icon-image"
+                src="assets/icon/pen-tool-2.png"
+                alt="Logo Design Icon"
+                style="width: 22px; height: 22px; margin-bottom: 10px; z-index:2;"
+              />
                 <h3 class="service-title">UI/UX Design</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
@@ -158,10 +161,11 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  class="fas fa-code"
-                  style="font-size: 22px; margin-bottom: 10px"
-                ></i>
+                <img class="icon-image"
+                src="assets/icon/scroll.png"
+                alt="Logo Design Icon"
+                style="width: 22px; height: 22px; margin-bottom: 10px; z-index:2;"
+              />
                 <h3 class="service-title">Digital Marketing</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
