--- a/index.html
+++ b/index.html
@@ -80,17 +80,23 @@
       </header>
 
       <section id="introduction-section">
-        <a class="lets-talk-link" href="#">
-          Let's talk <img src="./assets/arrow-right.png" />
-        </a>
+        <div class="bright-background">
+          <a class="action-button" href="#">
+            Let's talk <img src="./assets/arrow-right.png" />
+          </a>
 
-        <div class="introduction-image">
-          <img src="./assets/woman-looking-color-palettes-medium-shot.png" />
+          <div class="introduction-image">
+            <img class="dotted-image" src="./assets/border-dotted.png" />
+            <img
+              class="pallets-image"
+              src="./assets/woman-looking-color-palettes-medium-shot.png"
+            />
+          </div>
         </div>
 
         <h2>Elevate Your <span class="underline-img">Brand Identity</span></h2>
 
-        <p>
+        <p class="first-paragraph">
           Unlock the true potential of your brand. Our passionate team of
           creative experts is committed to delivering innovative and tailor-made
           solutions that elevate your brand to new heights.
@@ -116,17 +122,23 @@
         </p>
       </section>
 
-      <section class="services-section">
+      <section id="services-section">
         <h2>Our <span>Services</span></h2>
         <div class="services-container">
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <img class="icon-image"
-                src="assets/icon/pen-tool-2.png"
-                alt="Logo Design Icon"
-                style="width: 22px; height: 22px; margin-bottom: 10px; z-index:2;"
-              />
+                <img
+                  class="icon-image"
+                  src="assets/icon/pen-tool-2.png"
+                  alt="Logo Design Icon"
+                  style="
+                    width: 22px;
+                    height: 22px;
+                    margin-bottom: 10px;
+                    z-index: 2;
+                  "
+                />
                 <h3 class="service-title">Logo Design</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
@@ -135,11 +147,17 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <img class="icon-image"
-                src="assets/icon/scroll.png"
-                alt="Logo Design Icon"
-                style="width: 22px; height: 22px; margin-bottom: 10px; z-index:2;"
-              />
+                <img
+                  class="icon-image"
+                  src="assets/icon/scroll.png"
+                  alt="Logo Design Icon"
+                  style="
+                    width: 22px;
+                    height: 22px;
+                    margin-bottom: 10px;
+                    z-index: 2;
+                  "
+                />
                 <h3 class="service-title">Development</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
@@ -148,11 +166,17 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <img class="icon-image"
-                src="assets/icon/pen-tool-2.png"
-                alt="Logo Design Icon"
-                style="width: 22px; height: 22px; margin-bottom: 10px; z-index:2;"
-              />
+                <img
+                  class="icon-image"
+                  src="assets/icon/pen-tool-2.png"
+                  alt="Logo Design Icon"
+                  style="
+                    width: 22px;
+                    height: 22px;
+                    margin-bottom: 10px;
+                    z-index: 2;
+                  "
+                />
                 <h3 class="service-title">UI/UX Design</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
@@ -161,11 +185,17 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <img class="icon-image"
-                src="assets/icon/scroll.png"
-                alt="Logo Design Icon"
-                style="width: 22px; height: 22px; margin-bottom: 10px; z-index:2;"
-              />
+                <img
+                  class="icon-image"
+                  src="assets/icon/scroll.png"
+                  alt="Logo Design Icon"
+                  style="
+                    width: 22px;
+                    height: 22px;
+                    margin-bottom: 10px;
+                    z-index: 2;
+                  "
+                />
                 <h3 class="service-title">Digital Marketing</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
@@ -173,7 +203,9 @@
           </div>
         </div>
         <div class="view-more">
-          <a href="#">View more &rarr;</a>
+          <a class="action-button" href="#">
+            View More <img src="./assets/arrow-right.png" />
+          </a>
         </div>
       </section>
 
@@ -204,61 +236,65 @@
       </section>
 
       <section id="contact-us-section">
-        <div class="contact-us">
-          <h2><span class="underline-img">Contact</span> us today</h2>
+        <h2><span class="underline-img">Contact</span> us today</h2>
 
-          <div class="icons">
-            <div class="icon">
-              <img src="./assets/icon/location-dark.png" />
+        <div class="bright-background">
+          <div class="contact-us">
+            <div class="icons">
+              <div class="icon">
+                <img src="./assets/icon/location-dark.png" />
+              </div>
+              <div class="icon">
+                <img src="./assets/icon/call-dark.png" />
+              </div>
+              <div class="icon">
+                <img src="./assets/icon/sms-dark.png" />
+              </div>
             </div>
-            <div class="icon">
-              <img src="./assets/icon/call-dark.png" />
-            </div>
-            <div class="icon">
-              <img src="./assets/icon/sms-dark.png" />
+
+            <div class="info">
+              <div class="item">
+                <h3>Office Address</h3>
+                <p>66 Road Broklyn Street, 600</p>
+              </div>
+              <div class="item">
+                <h3>Contact No</h3>
+                <p>(509) 562-1912</p>
+              </div>
+              <div class="item">
+                <h3>Email</h3>
+                <p>contact@creativedesign.com</p>
+              </div>
             </div>
           </div>
 
-          <div class="info">
-            <div class="item">
-              <h3>Office Address</h3>
-              <p>66 Road Broklyn Street, 600</p>
-            </div>
-            <div class="item">
-              <h3>Contact No</h3>
-              <p>(509) 562-1912</p>
-            </div>
-            <div class="item">
-              <h3>Email</h3>
-              <p>contact@creativedesign.com</p>
-            </div>
+          <div class="form">
+            <form id="contact-form" action="/submit-path" method="post">
+              <div id="name-field">
+                <label for="name-input">Name*</label>
+                <input type="text" id="name-input" name="name" required />
+              </div>
+
+              <div id="email-field">
+                <label for="email-input">Email*</label>
+                <input type="email" id="email-input" name="email" required />
+              </div>
+
+              <div id="company-field">
+                <label for="company-input">Company Name*</label>
+                <input type="text" id="company-input" name="company" required />
+              </div>
+
+              <div id="phone-field">
+                <label for="phone-input">Phone No*</label>
+                <input type="text" id="phone-input" name="phone" required />
+              </div>
+
+              <button type="submit" id="submit" class="action-button">
+                Submit
+              </button>
+            </form>
           </div>
-        </div>
-
-        <div class="form">
-          <form id="contact-form" action="/submit-path" method="post">
-            <div id="name-field">
-              <label for="name-input">Name*</label>
-              <input type="text" id="name-input" name="name" required />
-            </div>
-
-            <div id="email-field">
-              <label for="email-input">Email*</label>
-              <input type="email" id="email-input" name="email" required />
-            </div>
-
-            <div id="company-field">
-              <label for="company-input">Company Name*</label>
-              <input type="text" id="company-input" name="company" required />
-            </div>
-
-            <div id="phone-field">
-              <label for="phone-input">Phone No*</label>
-              <input type="text" id="phone-input" name="phone" required />
-            </div>
-
-            <button id="submit" type="submit">Submit</button>
-          </form>
         </div>
       </section>
 
@@ -283,9 +319,9 @@
         </div>
 
         <div class="view-all-btn">
-          <button class="action-button">
+          <a class="action-button" href="#">
             View All <img src="./assets/arrow-right.png" />
-          </button>
+          </a>
         </div>
       </section>
     </main>
@@ -300,17 +336,21 @@
 
       <div class="newsletter">
         <h3>Subscribe to our Newsletter</h3>
-        <label for="email" style="color: white">Email*</label>
-        <input type="email" id="email" placeholder="Enter your email" />
-        <div class="subscribe">
-          By subscribing you agree to our
-          <a href="#" style="color: #c8c8c8ba">Terms & Conditions</a>
-        </div>
-        <button>Subscribe &rarr;</button>
+        <form id="newsletter-form" action="/submit-path" method="post">
+          <label for="email">Email*</label>
+          <input type="email" id="email" />
+          <div class="subscribe">
+            By subscribing you agree to our
+            <a href="#">Terms & Conditions</a>
+          </div>
+          <button type="submit" id="newsletter-submit" class="action-button">
+            <span>Subscribe <img src="./assets/arrow-right.png" /></span>
+          </button>
+        </form>
       </div>
 
       <div class="contact">
-        <h3 style="color: white; margin-bottom: 15px">Contact</h3>
+        <h3 style="margin-bottom: 15px">Contact</h3>
         <div>
           <img
             src="assets/icon/location.png"
@@ -333,7 +373,7 @@
       </div>
 
       <div class="explore">
-        <h3 style="color: white">Explore</h3>
+        <h3>Explore</h3>
         <a href="#">About</a>
         <a href="#">Our Team</a>
         <a href="#">Shop</a>
