Add changes for tablet version

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css" />
     <!-- <link rel="stylesheet" href="css/desktop.css"/> -->
-    <link rel="stylesheet" href="css/mobile.css" />
-    <!-- <link rel="stylesheet" href="css/tablet.css"/> -->
+    <!-- <link rel="stylesheet" href="css/mobile.css" /> -->
+    <link rel="stylesheet" href="css/tablet.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -77,23 +77,23 @@
           Crafting <span class="underline-img">Visual</span> Stories: Unleashing
           Creative Essence
         </h2>
-      </header>
 
-      <section id="introduction-section">
+        <a class="action-button" href="#">
+          Let's talk <img src="./assets/arrow-right.png" />
+        </a>
+
         <div class="bright-background">
-          <a class="action-button" href="#">
-            Let's talk <img src="./assets/arrow-right.png" />
-          </a>
-
-          <div class="introduction-image">
-            <img class="dotted-image" src="./assets/border-dotted.png" />
+          <div class="header-image">
             <img
               class="pallets-image"
               src="./assets/woman-looking-color-palettes-medium-shot.png"
             />
+            <img class="dotted-image" src="./assets/border-dotted.png" />
           </div>
         </div>
+      </header>
 
+      <section id="introduction-section">
         <h2>Elevate Your <span class="underline-img">Brand Identity</span></h2>
 
         <p class="first-paragraph">
