--- a/index.html
+++ b/index.html
@@ -212,22 +212,34 @@
       <section id="testemonial-section">
         <h2>Happy <span class="underline-img">stories</span> of our clients</h2>
 
-        <div class="testemonial">
-          <div class="testemonial-image">
-            <img src="./assets/testemonial.png" />
+        <div id="testemonial-content">
+          <div class="slider-left">
+            <img src="./assets/slider-left.png" />
           </div>
 
-          <div class="testemonial-text">
-            <img src="./assets/quotation-mark.png" />
-            <p>
-              With our extensive experience and deep understanding of brand
-              strategy, design, and storytelling, we collaborate closely with
-              our clients to craft brand experiences that resonate with their
-              target audience. Our goal is to create brands that not only
-              capture attention but also foster trust, loyalty, and recognition.
-            </p>
+          <div class="testemonial">
+            <div class="testemonial-image">
+              <img src="./assets/testemonial.png" />
+            </div>
+
+            <div class="testemonial-text">
+              <img src="./assets/quotation-mark.png" />
+              <p>
+                With our extensive experience and deep understanding of brand
+                strategy, design, and storytelling, we collaborate closely with
+                our clients to craft brand experiences that resonate with their
+                target audience. Our goal is to create brands that not only
+                capture attention but also foster trust, loyalty, and
+                recognition.
+              </p>
+            </div>
+          </div>
+
+          <div class="slider-right">
+            <img src="./assets/slider-right.png" />
           </div>
         </div>
+
         <div class="testemonial-slider">
           <img src="./assets/c1.png" />
           <img src="./assets/c2.png" />
@@ -240,31 +252,26 @@
 
         <div class="bright-background">
           <div class="contact-us">
-            <div class="icons">
+            <div class="item">
               <div class="icon">
                 <img src="./assets/icon/location-dark.png" />
               </div>
+              <span>Office Address</span>
+              <p>66 Road Broklyn Street, 600</p>
+            </div>
+            <div class="item">
               <div class="icon">
                 <img src="./assets/icon/call-dark.png" />
               </div>
+              <span>Contact No</span>
+              <p>(509) 562-1912</p>
+            </div>
+            <div class="item">
               <div class="icon">
                 <img src="./assets/icon/sms-dark.png" />
               </div>
-            </div>
-
-            <div class="info">
-              <div class="item">
-                <h3>Office Address</h3>
-                <p>66 Road Broklyn Street, 600</p>
-              </div>
-              <div class="item">
-                <h3>Contact No</h3>
-                <p>(509) 562-1912</p>
-              </div>
-              <div class="item">
-                <h3>Email</h3>
-                <p>contact@creativedesign.com</p>
-              </div>
+              <span>Email</span>
+              <p>contact@creativedesign.com</p>
             </div>
           </div>
 
