Add desktop layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css" />
-    <!-- <link rel="stylesheet" href="css/desktop.css"/> -->
+    <link rel="stylesheet" href="css/desktop.css" />
     <!-- <link rel="stylesheet" href="css/mobile.css" /> -->
-    <link rel="stylesheet" href="css/tablet.css" />
+    <!-- <link rel="stylesheet" href="css/tablet.css" /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -104,22 +104,24 @@
 
         <div class="introduction-image">
           <img src="./assets/branding.png" />
+
+          <div class="introduction-description">
+            <p>
+              We believe that a strong brand is the conerstone of every
+              successfull business. We are passionate team of branding experts
+              dedicated to helping business like yours create a unique and
+              compeling brand identity.
+            </p>
+
+            <p>
+              With our extensive experience and deep understanding of brand
+              strategy, design, and storytelling, we collaborate closely with
+              our clients to craft brand experiences that resonate with their
+              target audience. Our goal is to create brands that not only
+              capture attention but also foster trut , loyalty, and recognition.
+            </p>
+          </div>
         </div>
-
-        <p>
-          We believe that a strong brand is the conerstone of every successfull
-          business. We are passionate team of branding experts dedicated to
-          helping business like yours create a unique and compeling brand
-          identity.
-        </p>
-
-        <p>
-          With our extensive experience and deep understanding of brand
-          strategy, design, and storytelling, we collaborate closely with our
-          clients to craft brand experiences that resonate with their target
-          audience. Our goal is to create brands that not only capture attention
-          but also foster trut , loyalty, and recognition.
-        </p>
       </section>
 
       <section id="services-section">
@@ -133,12 +135,7 @@
                     class="icon-image"
                     src="assets/icon/pen-tool-2.png"
                     alt="Logo Design Icon"
-                    style="
-                      width: 32px;
-                      height: 32px;
-                      margin-bottom: 0px;
-                      z-index: 2;
-                    "
+                    style="margin-bottom: 0px; z-index: 2"
                 /></i>
                 <h3 class="service-title">Logo Design</h3>
               </div>
@@ -153,12 +150,7 @@
                     class="icon-image"
                     src="assets/icon/scroll.png"
                     alt="Logo Design Icon"
-                    style="
-                      width: 32px;
-                      height: 32px;
-                      margin-bottom: 0px;
-                      z-index: 2;
-                    "
+                    style="margin-bottom: 0px; z-index: 2"
                 /></i>
                 <h3 class="service-title">Development</h3>
               </div>
@@ -173,12 +165,7 @@
                     class="icon-image"
                     src="assets/icon/ruler&pen.png"
                     alt="Logo Design Icon"
-                    style="
-                      width: 32px;
-                      height: 32px;
-                      margin-bottom: 0px;
-                      z-index: 2;
-                    "
+                    style="margin-bottom: 0px; z-index: 2"
                 /></i>
                 <h3 class="service-title">UI/UX Design</h3>
               </div>
@@ -193,14 +180,69 @@
                     class="icon-image"
                     src="assets/icon/monitor.png"
                     alt="Logo Design Icon"
-                    style="
-                      width: 32px;
-                      height: 32px;
-                      margin-bottom: 0px;
-                      z-index: 2;
-                    "
+                    style="margin-bottom: 0px; z-index: 2"
                 /></i>
                 <h3 class="service-title">Digital Marketing</h3>
+              </div>
+              <a href="#" class="service-link">Request a quote &rarr;</a>
+            </div>
+          </div>
+          <div class="service-card desktop">
+            <div class="service-content">
+              <div class="service-title-wrapper">
+                <i
+                  ><img
+                    class="icon-image"
+                    src="assets/icon/document-text.png"
+                    alt="Logo Design Icon"
+                    style="margin-bottom: 0px; z-index: 2"
+                /></i>
+                <h3 class="service-title">Content Writing</h3>
+              </div>
+              <a href="#" class="service-link">Request a quote &rarr;</a>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-content">
+              <div class="service-title-wrapper">
+                <i
+                  ><img
+                    class="icon-image"
+                    src="assets/icon/sms-edit.png"
+                    alt="Logo Design Icon"
+                    style="margin-bottom: 0px; z-index: 2"
+                /></i>
+                <h3 class="service-title">Email Marketing</h3>
+              </div>
+              <a href="#" class="service-link">Request a quote &rarr;</a>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-content">
+              <div class="service-title-wrapper">
+                <i
+                  ><img
+                    class="icon-image"
+                    src="assets/icon/design.png"
+                    alt="Logo Design Icon"
+                    style="margin-bottom: 0px; z-index: 2"
+                /></i>
+                <h3 class="service-title">Motion Design</h3>
+              </div>
+              <a href="#" class="service-link">Request a quote &rarr;</a>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-content">
+              <div class="service-title-wrapper">
+                <i
+                  ><img
+                    class="icon-image"
+                    src="assets/icon/color-swatch.png"
+                    alt="Logo Design Icon"
+                    style="margin-bottom: 0px; z-index: 2"
+                /></i>
+                <h3 class="service-title">Print Design</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -324,6 +366,13 @@
             <img class="stay-updated-image" src="./assets/stay-updated-2.png" />
             <div class="description">
               <p>Understanding different types of Marketing data</p>
+              <span>Read more <img src="./assets/arrow-right-blue.png" /></span>
+            </div>
+          </div>
+          <div class="card">
+            <img class="stay-updated-image" src="./assets/stay-updated-3.png" />
+            <div class="description">
+              <p>Understanding the users need to grow your business</p>
               <span>Read more <img src="./assets/arrow-right-blue.png" /></span>
             </div>
           </div>
