Fix footer layout

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/desktop.css" />
-    <!-- <link rel="stylesheet" href="css/mobile.css" /> -->
+    <!-- <link rel="stylesheet" href="css/desktop.css" /> -->
+    <link rel="stylesheet" href="css/mobile.css" />
     <!-- <link rel="stylesheet" href="css/tablet.css" /> -->
     <link
       rel="stylesheet"
@@ -386,60 +386,54 @@
       </section>
     </main>
     <div class="footer">
-      <div class="top">
-        <div class="top-section">
-          <div class="logo">
-            <img src="assets/Logo large.png" alt="Logo" />
-          </div>
-          <div class="social-icons">
-            <a href="#"
-              ><img src="assets/icon/dribbble.png" alt="Dribbble"
-            /></a>
-            <a href="#"><img src="assets/icon/behance.png" alt="Benhance" /></a>
-            <a href="#"
-              ><img src="assets/icon/instagram.png" alt="Instagram"
-            /></a>
-            <a href="#"
-              ><img src="assets/icon/linkedin.png" alt="LinkedIn"
-            /></a>
-          </div>
+      <div class="icons">
+        <div class="logo">
+          <img src="assets/Logo large.png" alt="Logo" />
         </div>
-        <div class="newsletter">
-          <h3 style="color: white">Subscribe to our Newsletter</h3>
-          <label for="email" style="color: white">Email*</label>
-          <input type="email" id="email" placeholder="" />
-          <p>
-            By subscribing you agree to our <a href="#">Terms & Conditions</a>
-          </p>
-          <button>Subscribe &rarr;</button>
+        <div class="social-icons">
+          <a href="#"><img src="assets/icon/dribbble.png" alt="Dribbble" /></a>
+          <a href="#"><img src="assets/icon/behance.png" alt="Benhance" /></a>
+          <a href="#"
+            ><img src="assets/icon/instagram.png" alt="Instagram"
+          /></a>
+          <a href="#"><img src="assets/icon/linkedin.png" alt="LinkedIn" /></a>
         </div>
       </div>
-      <div class="bottom">
-        <div class="contact">
-          <h3 style="color: white">Contact</h3>
-          <p style="color: white">
-            <img src="assets/icon/location.png" alt="Location" />66 Road
-            Brooklyn Street, 600
-          </p>
-          <p style="color: white">
-            <img src="assets/icon/call.png" alt="Phone" />(509) 562-1912
-          </p>
-          <p style="color: white">
-            <img
-              src="assets/icon/sms.png"
-              alt="Email"
-            />contact@creativedesign.com
-          </p>
-        </div>
-        <div class="explore">
-          <h3 style="color: white">Explore</h3>
-          <a href="#">About</a>
-          <a href="#">Our Team</a>
-          <a href="#">Shop</a>
-          <a href="#">Career</a>
-          <a href="#">Blog</a>
-        </div>
+      <div class="newsletter">
+        <h3 style="color: white">Subscribe to our Newsletter</h3>
+        <label for="email" style="color: white">Email*</label>
+        <input type="email" id="email" placeholder="" />
+        <p>
+          By subscribing you agree to our <a href="#">Terms & Conditions</a>
+        </p>
+        <button>Subscribe &rarr;</button>
       </div>
+
+      <div class="contact">
+        <h3 style="color: white">Contact</h3>
+        <p style="color: white">
+          <img src="assets/icon/location.png" alt="Location" />66 Road Brooklyn
+          Street, 600
+        </p>
+        <p style="color: white">
+          <img src="assets/icon/call.png" alt="Phone" />(509) 562-1912
+        </p>
+        <p style="color: white">
+          <img
+            src="assets/icon/sms.png"
+            alt="Email"
+          />contact@creativedesign.com
+        </p>
+      </div>
+      <div class="explore">
+        <h3 style="color: white">Explore</h3>
+        <a href="#">About</a>
+        <a href="#">Our Team</a>
+        <a href="#">Shop</a>
+        <a href="#">Career</a>
+        <a href="#">Blog</a>
+      </div>
+
       <div class="copyright">
         &copy; 2023 Creative Design Agency, All Rights Reserved
       </div>
