fix our services cards

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css" />
-    <!-- <link rel="stylesheet" href="css/desktop.css" /> -->
-    <link rel="stylesheet" href="css/mobile.css" />
+    <link rel="stylesheet" href="css/desktop.css" />
+    <!-- <link rel="stylesheet" href="css/mobile.css" /> -->
     <!-- <link rel="stylesheet" href="css/tablet.css" /> -->
     <link
       rel="stylesheet"
@@ -130,14 +130,12 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  ><img
-                    class="icon-image"
-                    src="assets/icon/pen-tool-2.png"
-                    alt="Logo Design Icon"
-                    style="margin-bottom: 0px; z-index: 2"
-                /></i>
-                <h3 class="service-title">Logo Design</h3>
+                <img
+                  class="icon-image"
+                  src="assets/icon/pen-tool-2.png"
+                  alt="Logo Design Icon"
+                />
+                <span class="service-title">Logo Design</span>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -145,14 +143,13 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  ><img
-                    class="icon-image"
-                    src="assets/icon/scroll.png"
-                    alt="Logo Design Icon"
-                    style="margin-bottom: 0px; z-index: 2"
-                /></i>
-                <h3 class="service-title">Development</h3>
+                <img
+                  class="icon-image"
+                  src="assets/icon/scroll.png"
+                  alt="Logo Design Icon"
+                  style="margin-bottom: 0px; z-index: 2"
+                />
+                <span class="service-title">Development</span>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -160,14 +157,13 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  ><img
-                    class="icon-image"
-                    src="assets/icon/ruler&pen.png"
-                    alt="Logo Design Icon"
-                    style="margin-bottom: 0px; z-index: 2"
-                /></i>
-                <h3 class="service-title">UI/UX Design</h3>
+                <img
+                  class="icon-image"
+                  src="assets/icon/ruler&pen.png"
+                  alt="Logo Design Icon"
+                  style="margin-bottom: 0px; z-index: 2"
+                />
+                <span class="service-title">UI/UX Design</span>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -175,14 +171,13 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  ><img
-                    class="icon-image"
-                    src="assets/icon/monitor.png"
-                    alt="Logo Design Icon"
-                    style="margin-bottom: 0px; z-index: 2"
-                /></i>
-                <h3 class="service-title">Digital Marketing</h3>
+                <img
+                  class="icon-image"
+                  src="assets/icon/monitor.png"
+                  alt="Logo Design Icon"
+                  style="margin-bottom: 0px; z-index: 2"
+                />
+                <span class="service-title">Digital Marketing</span>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -190,14 +185,13 @@
           <div class="service-card desktop">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  ><img
-                    class="icon-image"
-                    src="assets/icon/document-text.png"
-                    alt="Logo Design Icon"
-                    style="margin-bottom: 0px; z-index: 2"
-                /></i>
-                <h3 class="service-title">Content Writing</h3>
+                <img
+                  class="icon-image"
+                  src="assets/icon/document-text.png"
+                  alt="Logo Design Icon"
+                  style="margin-bottom: 0px; z-index: 2"
+                />
+                <span class="service-title">Content Writing</span>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -205,14 +199,13 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  ><img
-                    class="icon-image"
-                    src="assets/icon/sms-edit.png"
-                    alt="Logo Design Icon"
-                    style="margin-bottom: 0px; z-index: 2"
-                /></i>
-                <h3 class="service-title">Email Marketing</h3>
+                <img
+                  class="icon-image"
+                  src="assets/icon/sms-edit.png"
+                  alt="Logo Design Icon"
+                  style="margin-bottom: 0px; z-index: 2"
+                />
+                <span class="service-title">Email Marketing</span>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -220,14 +213,13 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  ><img
-                    class="icon-image"
-                    src="assets/icon/design.png"
-                    alt="Logo Design Icon"
-                    style="margin-bottom: 0px; z-index: 2"
-                /></i>
-                <h3 class="service-title">Motion Design</h3>
+                <img
+                  class="icon-image"
+                  src="assets/icon/design.png"
+                  alt="Logo Design Icon"
+                  style="margin-bottom: 0px; z-index: 2"
+                />
+                <span class="service-title">Motion Design</span>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -235,14 +227,13 @@
           <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i
-                  ><img
-                    class="icon-image"
-                    src="assets/icon/color-swatch.png"
-                    alt="Logo Design Icon"
-                    style="margin-bottom: 0px; z-index: 2"
-                /></i>
-                <h3 class="service-title">Print Design</h3>
+                <img
+                  class="icon-image"
+                  src="assets/icon/color-swatch.png"
+                  alt="Logo Design Icon"
+                  style="margin-bottom: 0px; z-index: 2"
+                />
+                <span class="service-title">Print Design</span>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
@@ -406,7 +397,9 @@
         <p>
           By subscribing you agree to our <a href="#">Terms & Conditions</a>
         </p>
-        <button>Subscribe &rarr;</button>
+        <button type="submit" id="newsletter-submit" class="action-button">
+          <span>Subscribe <img src="./assets/arrow-right.png" /></span>
+        </button>
       </div>
 
       <div class="contact">
