--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/desktop.css" />
+    <!-- <link rel="stylesheet" href="css/desktop.css" /> -->
     <!-- <link rel="stylesheet" href="css/mobile.css" /> -->
-    <!-- <link rel="stylesheet" href="css/tablet.css" /> -->
+    <link rel="stylesheet" href="css/tablet.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
